--- a/bl.css
+++ b/bl.css
@@ -152,7 +152,9 @@ img {
     white-space: nowrap;
     display: flex;
     align-items: center;
+    justify-content: center;
     padding: 5vw;
+    /* background-color: red; */
   }
 
   img {
